[workspace]
members = ["store", "crypto", "network", "mempool", "consensus", "node"]
[patch]
[patch.crates-io]
eth2_hashing = { path = "../lighthouse/crypto/eth2_hashing" }
eth2_serde_utils = { path = "../lighthouse/consensus/serde_utils" }
eth2_ssz = { path = "../lighthouse/consensus/ssz" }
eth2_ssz_derive = { path = "../lighthouse/consensus/ssz_derive" }
eth2_ssz_types = { path = "../lighthouse/consensus/ssz_types" }
tree_hash = { path = "../lighthouse/consensus/tree_hash" }
tree_hash_derive = { path = "../lighthouse/consensus/tree_hash_derive" }